add google tag manager scripts

--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dra. Claudia Olmos</title>
-    <!-- Meta datos necesarios para cargar imagen al mandar link -->
-		<meta name="author" content="Leonel Valentín">
-		<meta name="keywords" content="Rehabilitación Oral, Claudia Olmos, Ortodoncia, Odontología, Dentista, Clínica dental, Tratamientos dentales, Cuidado dental, Salud bucal, Odontología preventiva, Ortodoncia, Implantes dentales, Blanqueamiento dental, Endodoncia, Prótesis dentales, Periodoncia, Carillas dentales, Odontopediatría, Estética dental, Radiografías dentales, Cirugía oral, Urgencias dentales, Sedación consciente.">
-		<meta name="description" content="En nuestra consultorio dental, liderado por la Dra. Claudia Karina Olmos Miranda, nos enfocamos en brindar un servicio personalizado y de alta calidad. Con un firme compromiso hacia la ética, la honestidad y el bienestar de nuestros pacientes, trabajamos en un ambiente relajado y de confianza. Cada tratamiento se aborda de manera individual, proporcionando toda la información necesaria para que nuestros pacientes recuperen y mantengan su salud dental con seguridad y tranquilidad.." />
-		<!-- open graph -->
-		<meta property="og:title" content="Dra. Claudia Olmos" />
-		<meta property="og:description" content="En nuestra consultorio dental, liderado por la Dra. Claudia Karina Olmos Miranda, nos enfocamos en brindar un servicio personalizado y de alta calidad. Con un firme compromiso hacia la ética, la honestidad y el bienestar de nuestros pacientes, trabajamos en un ambiente relajado y de confianza. Cada tratamiento se aborda de manera individual, proporcionando toda la información necesaria para que nuestros pacientes recuperen y mantengan su salud dental con seguridad y tranquilidad.." />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://ClaudiaOlmos.com.mx" />
-		<meta property="og:image" content="https://ClaudiaOlmos.com.mx/assets/logo-BMWcnmOB.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MVB3T2ZP');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="UTF-8" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dra. Claudia Olmos</title>
+  <!-- Meta datos necesarios para cargar imagen al mandar link -->
+  <meta name="author" content="Leonel Valentín">
+  <meta name="keywords"
+    content="Rehabilitación Oral, Claudia Olmos, Ortodoncia, Odontología, Dentista, Clínica dental, Tratamientos dentales, Cuidado dental, Salud bucal, Odontología preventiva, Ortodoncia, Implantes dentales, Blanqueamiento dental, Endodoncia, Prótesis dentales, Periodoncia, Carillas dentales, Odontopediatría, Estética dental, Radiografías dentales, Cirugía oral, Urgencias dentales, Sedación consciente.">
+  <meta name="description"
+    content="En nuestra consultorio dental, liderado por la Dra. Claudia Karina Olmos Miranda, nos enfocamos en brindar un servicio personalizado y de alta calidad. Con un firme compromiso hacia la ética, la honestidad y el bienestar de nuestros pacientes, trabajamos en un ambiente relajado y de confianza. Cada tratamiento se aborda de manera individual, proporcionando toda la información necesaria para que nuestros pacientes recuperen y mantengan su salud dental con seguridad y tranquilidad.." />
+  <!-- open graph -->
+  <meta property="og:title" content="Dra. Claudia Olmos" />
+  <meta property="og:description"
+    content="En nuestra consultorio dental, liderado por la Dra. Claudia Karina Olmos Miranda, nos enfocamos en brindar un servicio personalizado y de alta calidad. Con un firme compromiso hacia la ética, la honestidad y el bienestar de nuestros pacientes, trabajamos en un ambiente relajado y de confianza. Cada tratamiento se aborda de manera individual, proporcionando toda la información necesaria para que nuestros pacientes recuperen y mantengan su salud dental con seguridad y tranquilidad.." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ClaudiaOlmos.com.mx" />
+  <meta property="og:image" content="https://ClaudiaOlmos.com.mx/assets/logo-BMWcnmOB.png" />
+</head>
+
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVB3T2ZP" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
